# ionization

./: .gitignore  CMakeLists.txt  asymptote-bak2.f90  asymptote.f90  basis-bak1.f90  basis-bak2.f90  basis-bak3.f90  basis-iim.f90  basis.f90  boundary-bak2.f90  boundary-bak3.f90  boundary-bak4.f90  boundary-bak5.f90  boundary.f90  cmakelists.txt  const.f90  global-bak1.f90  global-bak2.f90  global-bak3.f90  global.f90  gsl_special-bak2.f90  gsl_special.f90  hamiltonian-bak1.f90  hamiltonian-bak2.f90  hamiltonian-bak3.f90  hamiltonian.f90  inf.f90  inner.f90  input-bak.data  input-bak1.data  input-bak2.data  input-bak3.data  input.data  main-bak2.f90  main.f90  makefile  outer.f90
note/2014-12-27/: dvr-output.txt  dvr.maxima
